fix: overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -25,7 +25,9 @@ body {
 }
 
 .mapboxgl-popup-content {
-  color: black
+  color: black;
+  overflow-y: scroll;
+  overflow-x: unset;
 }
 
 .mapboxgl-popup-content {
